# maps-service-poc

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
alembic/versions/: 304d5ade55be_create_points_polygons.py  8f25b4c94aa7_create_proyect_table.py  b6e0925ba7f2_create_polygons_table.py
src/: config.py
src/adapters/: orm.py  repository.py
src/domain/: model.py
src/entrypoints/: flask_app.py  flask_app_new.py
src/entrypoints/static/data/: geo_map.json
src/models/: polygons.py
src/service/: unit_of_work.py
static/data/: geo_map.json
test-reports/: junit.xml
tests/: polygons.py
