[tool.poetry]
name = "maps-service-poc"
version = "0.1.0"
description = ""
authors = ["Julian Scala <julianlopezscala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
Flask = "^2.1.2"
folium = "0.12.1.post1"
SQLAlchemy = "1.4.36"
alembic = "1.7.7"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
