[tool.poetry]
name = "maps-service-poc"
version = "0.1.0"
description = ""
authors = ["Julian Scala <julianlopezscala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
Flask = "^2.1.2"
folium = "0.12.1.post1"
SQLAlchemy = "1.4.36"
GeoAlchemy2 = "0.11.1"
alembic = "1.7.7"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
pre-commit = "2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
